--- a/client/src/app/components/form/form.component.html
+++ b/client/src/app/components/form/form.component.html
@@ -5,7 +5,7 @@
             <div id="model_close_btn" class="model_close" (click)="closeForm()">&#x2715;</div>
         </div>
 
-        <form (ngSubmit)="formSubmit()">
+        <form (ngSubmit)="formSubmit()" enctype="multipart/form-data">
             <input type="hidden" id="item_id" name="item_id" value="">
 
             <div class="form_control">
@@ -49,6 +49,12 @@
                     <option value="1">Online</option>
                     <option value="0">Offline</option>
                 </select>
+                <small class="input_error"></small>
+            </div>
+
+            <div class="form_control">
+                <label for="bill_file" class="input_label">Upload Bill:</label>
+                <input type="file" id="bill_file" name="bill_file" class="input" (change)="fileHandler($event)" #inputBill>
                 <small class="input_error"></small>
             </div>
 
