--- a/client/src/app/components/form/form.component.html
+++ b/client/src/app/components/form/form.component.html
@@ -52,6 +52,12 @@
                 <small class="input_error"></small>
             </div>
 
+            <div class="form_control">
+                <label for="expense_bill" class="input_label">Upload bill:</label>
+                <input type="file" id="expense_bill" name="expense_bill" class="input">
+                <small class="input_error"></small>
+            </div>
+
             <h4 style="margin-top: 15px;">Shop Details:</h4>
 
             <div class="form_control">
