--- a/client/src/app/components/expenses/expenses.component.html
+++ b/client/src/app/components/expenses/expenses.component.html
@@ -14,6 +14,7 @@
                     <th id="cost_filter" class="filter">Cost</th>
                     <th>Category</th>
                     <th id="paymode_filter" class="filter">Payment Mode</th>
+                    <th>Bill File</th>
                     <th>Shop Details</th>
                     <th>Action</th>
                 </tr>
@@ -35,6 +36,14 @@
                         <span class='badge online'>Online</span>
                         } @else {
                         <span class='badge offline'>Offline</span>
+                        }
+                    </td>
+                    <td>
+                        @if(exp.billFile){
+                            <a href="http://127.0.0.1:3000/uploads/{{exp.billFile}}" download>
+                            <i class="fa fa-link"></i></a>
+                        }@else{
+                            {{"-"}}
                         }
                     </td>
                     <td>
