--- a/client/src/app/components/expenses/expenses.component.html
+++ b/client/src/app/components/expenses/expenses.component.html
@@ -40,7 +40,7 @@
                     </td>
                     <td>
                         @if(exp.billFile){
-                            <a href="http://127.0.0.1:3000/uploads/{{exp.billFile}}" download>
+                            <a href="http://127.0.0.1:3000/uploads/{{exp.billFile}}" class="billfile_link" download>
                             <i class="fa fa-link"></i></a>
                         }@else{
                             {{"-"}}
