--- a/client/src/app/components/cards/cards.component.html
+++ b/client/src/app/components/cards/cards.component.html
@@ -1,17 +1,17 @@
 <div class="cards" id="numbers">
 
     <div class="card">
-        <h1 class="card_value" id="avg_cost">{{ numbers.avgCost }}</h1>
+        <h1 class="card_value" id="avg_cost">{{ numbers.avgCost || 0 }}</h1>
         <span class="card_title">Average cost</span>
     </div>
     
     <div class="card">
-        <h1 class="card_value" id="total_cost">{{ numbers.totalCost }}</h1>
+        <h1 class="card_value" id="total_cost">{{ numbers.totalCost || 0 }}</h1>
         <span class="card_title">Total Cost</span>
     </div>
     
     <div class="card">
-        <h1 class="card_value" id="total_expenses">{{ numbers.totalExpense }}</h1>
+        <h1 class="card_value" id="total_expenses">{{ numbers.totalExpense || 0 }}</h1>
         <span class="card_title">Total Expense</span>
     </div>
 
