--- a/client/src/app/components/expenses/expenses.component.html
+++ b/client/src/app/components/expenses/expenses.component.html
@@ -40,7 +40,7 @@
                     </td>
                     <td>
                         @if(exp.billFile){
-                            <a href="https://expense-tracker-server.vercel.app//uploads/{{exp.billFile}}" class="billfile_link" download>
+                            <a href="https://api-expense-tracker.vercel.app/uploads/{{exp.billFile}}" class="billfile_link" download>
                             <i class="fa fa-link"></i></a>
                         }@else{
                             {{"-"}}
